
t/cookies.t should not hang on Windows any more.

META.yml has been updated so the search.cpan.org links should be
correct.

Passing no_proxy would make LWP::UserAgent barf.  Thanks to Mike
Schilli for the fix.

Cookies test would fail under Windows.  Fixed, thanks to many people
reporting it.

[ENHANCEMENTS]
$mech->submit_form() now can specify the form by ID using the form_id
parameter.



1.54        Mon Jan 12 00:36:08 CST 2009
========================================
[FIXED]
Removed the computers4sure test that was failing.


1.52        Tue Nov 25 09:52:30 CST 2008
========================================
[FIXED]
Improved some error messages in $mech->submit_form().  Thanks to
Norbert Buchmuller.


1.51_03     Thu Nov 20 11:05:49 CST 2008
========================================
[FIXED]
The $mech->clone() method was not passing the cookie jar to its
clone properly.  Thanks to David Sainty.

The $mech->back() can fail if there's nothing on the stack to go
back to.  Thanks to Dave Page.

$mech->follow_link() did not complain if a link could not be found,
even with autocheck on.  Now it does.  Thanks, Flavio Poletti.

[ENHANCEMENTS]
Added a $mech->form_id() method so you can look up forms by ID.

Added $mech->content_type(), because $mech->ct() is too cryptic.


1.51_02     Tue Nov 18 01:30:54 CST 2008
========================================
[STILL BROKEN]
t/local/click_button.t is still failing its tests for calling ->click
on an HTML::Form object.  I suspect this is an LWP change, but I
haven't dug into it enough yet.

[FIXES]
Fixed the bad credentials API that stomped on LWP::UserAgent's
credentials() method.  Thanks to Max Maschien and Matt Lawrence.

The $mech->links method now finds <link href="..."> links. Thanks
to H.Merijn Brand.

Makefile.PL explicitly requires Perl 5.8.0.

URI.pm has to be version 1.36 or else URIs don't get encoded
correctly.

LWP has to be 5.819 or we have encoding problems.


1.51_01     Thu Nov  6 15:13:03 CST 2008